@@ -175,6 +175,9 @@ std::string get_fragment(bool blend_modes)
 	"uniform float		sat;															\n"
 	"uniform float		con;															\n"
 	"																					\n"	
+	"uniform bool		post_processing;												\n"
+	"uniform bool		straighten_alpha;												\n"
+	"																					\n"	
     "uniform int        chroma_mode;                                                    \n"
     "uniform vec2       chroma_blend;                                                   \n"
     "uniform float      chroma_spill;                                                   \n"
@@ -257,8 +260,24 @@ std::string get_fragment(bool blend_modes)
 	"	return vec4(0.0, 0.0, 0.0, 0.0);												\n"
 	"}																					\n"
 	"																					\n"
+	"vec4 post_process()																\n"
+	"{																					\n"
+	"	vec4 color = texture2D(background, gl_TexCoord[0].st).bgra;						\n"
+	"																					\n"
+	"	if (straighten_alpha && color.a > 0.0 && color.a != 1.0)						\n"
+	"		color.rgb /= color.a;														\n"
+	"																					\n"
+	"	return color;																	\n"
+	"}																					\n"
+	"																					\n"
 	"void main()																		\n"
 	"{																					\n"
+	"	if (post_processing)															\n"
+	"	{																				\n"
+	"		gl_FragColor = post_process().bgra;											\n"
+	"		return;																		\n"
+	"	}																				\n"
+	"																					\n"
 	"	vec4 color = get_rgba_color();													\n"
 	"   color = chroma_key(color);                                                      \n"
 	"   if(levels)																		\n"
